# serializer

./: .clang-format  CMakeLists.txt
examples/: CMakeLists.txt  basic_serialization.cpp
include/ecpp/: serial.hpp  serial_options.hpp  serial_utils.hpp  serializer.hpp  serializer_options.hpp
tests/: CMakeLists.txt  containers_serialization.cpp  fundamental_types_serialization.cpp  serialization.cpp
